Adds create game component
